Fixed overflow

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,7 +11,8 @@
 @import 'node_modules/bootstrap-vue/src/index.scss';
 
 body {
-  overflow-x: hidden;
+  overflow: hidden;
+  overflow-y: scroll;
   background-color: #F0F2F5;
 }
 
